# apical_classifier

./: LICENSE  README.md  make_apical_model.ipynb  requirements.txt  setup.cfg  setup.py
apical_classifier/: apical_features.py  apical_model_utils.py
models/: branch_params_current.pkl  feature_cols_current.pkl
src/: apical_features.py  apical_model_utils.py
training_skeletons/: 864691134884871930_with_apical.h5  864691135162310957_with_apical.h5  864691135181977858_with_apical.h5  864691135233295705_with_apical.h5  864691135274322149_with_apical.h5  864691135274334181_with_apical.h5  864691135274448101_with_apical.h5  864691135278398625_with_apical.h5  864691135334693097_with_apical.h5  864691135345425311_with_apical.h5  864691135355207375_with_apical.h5  864691135358807384_with_apical.h5  864691135367351801_with_apical.h5  864691135382620122_with_apical.h5  864691135382723290_with_apical.h5  864691135394166773_with_apical.h5  864691135394257141_with_apical.h5  864691135396555809_with_apical.h5  864691135407449033_with_apical.h5  864691135428664368_with_apical.h5  864691135445835922_with_apical.h5  864691135474815808_with_apical.h5  864691135478396358_with_apical.h5  864691135490391655_with_apical.h5  864691135501692226_with_apical.h5  864691135502247093_with_apical.h5  864691135516059091_with_apical.h5  864691135517695626_with_apical.h5  864691135560494305_with_apical.h5  864691135564761879_with_apical.h5  864691135569046918_with_apical.h5  864691135571024365_with_apical.h5  864691135571324197_with_apical.h5  864691135571456037_with_apical.h5  (+50 more)
