[metadata]

name = apical_classifier, 
version = 1.0.0,
author = Casey Schneider-Mizell
description = this package contains code that will identify the apical branch/branches on a given neuron
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Mac OSI

[options]
packages = find:
python_requires = >= 3.0
include_package_data = True


